# core/handlers/token.go
@@ -5,13 +5,11 @@ package handlers
 
 import (
 	"fmt"
+	"github.com/zerjioang/etherniti/core/server"
 	"math"
 	"math/big"
 
-	"github.com/zerjioang/etherniti/core/config"
-
 	"github.com/ethereum/go-ethereum/accounts/abi/bind"
-	"github.com/ethereum/go-ethereum/ethclient"
 	"github.com/labstack/echo"
 	"github.com/labstack/gommon/log"
 	"github.com/zerjioang/etherniti/core/eth"
@@ -33,12 +31,16 @@ func NewTokenController(manager eth.WalletManager) TokenController {
 func (ctl TokenController) instantiate(c echo.Context) error {
 	targetAddr := c.Param("address")
 	ethAddr := eth.ConvertAddress(targetAddr)
-	client, err := ctl.getClientInstance(c)
-	if err == nil {
-		instance, err := eth.InstantiateToken(client, ethAddr)
-		if err == nil && instance != nil {
-			//todo save token instance in memory
-		}
+
+	// cast to our context
+	cc, ok := c.(*server.EthernitiContext)
+	if !ok {
+		return ErrorStr(c, "failed to execute requested operation")
+	}
+
+	instance, err := eth.InstantiateToken(cc, ethAddr)
+	if err == nil && instance != nil {
+		//todo save token instance in memory
 	}
 	return err
 }
@@ -46,57 +48,50 @@ func (ctl TokenController) instantiate(c echo.Context) error {
 func (ctl TokenController) summary(c echo.Context) error {
 	targetAddr := c.Param("address")
 	ethAddr := eth.ConvertAddress(targetAddr)
-	client, err := ctl.getClientInstance(c)
-	if err == nil {
-		instance, err := eth.InstantiateToken(client, ethAddr)
-		if err == nil && instance != nil {
-			//todo save token instance in memory
 
-			//show token summary
-			bal, err := instance.BalanceOf(&bind.CallOpts{}, ethAddr)
-			if err != nil {
-				log.Fatal(err)
-			}
+	// cast to our context
+	cc, ok := c.(*server.EthernitiContext)
+	if !ok {
+		return ErrorStr(c, "failed to execute requested operation")
+	}
+	instance, err := eth.InstantiateToken(cc, ethAddr)
+	if err == nil && instance != nil {
+		//todo save token instance in memory
 
-			name, err := instance.Name(&bind.CallOpts{})
-			if err != nil {
-				log.Fatal(err)
-			}
-
-			symbol, err := instance.Symbol(&bind.CallOpts{})
-			if err != nil {
-				log.Fatal(err)
-			}
-
-			decimals, err := instance.Decimals(&bind.CallOpts{})
-			if err != nil {
-				log.Fatal(err)
-			}
-
-			fmt.Printf("name: %s\n", name)         // "name: Golem Network"
-			fmt.Printf("symbol: %s\n", symbol)     // "symbol: GNT"
-			fmt.Printf("decimals: %v\n", decimals) // "decimals: 18"
-
-			fmt.Printf("wei: %s\n", bal) // "wei: 74605500647408739782407023"
-
-			fbal := new(big.Float)
-			fbal.SetString(bal.String())
-			value := new(big.Float).Quo(fbal, big.NewFloat(math.Pow10(int(decimals))))
-
-			fmt.Printf("balance: %f", value) // "balance: 74605500.647409"
+		//show token summary
+		bal, err := instance.BalanceOf(&bind.CallOpts{}, ethAddr)
+		if err != nil {
+			log.Fatal(err)
 		}
-	}
-	return err
-}
 
-// from incoming http request, it recovers the eth client linked to it
-func (ctl TokenController) getClientInstance(c echo.Context) (*ethclient.Client, error) {
-	requestProfileKey := c.Request().Header.Get(config.HttpProfileHeaderkey)
-	wallet, found := ctl.walletManager.Get(requestProfileKey)
-	if !found {
-		return nil, errNoConnectionProfile
+		name, err := instance.Name(&bind.CallOpts{})
+		if err != nil {
+			log.Fatal(err)
+		}
+
+		symbol, err := instance.Symbol(&bind.CallOpts{})
+		if err != nil {
+			log.Fatal(err)
+		}
+
+		decimals, err := instance.Decimals(&bind.CallOpts{})
+		if err != nil {
+			log.Fatal(err)
+		}
+
+		fmt.Printf("name: %s\n", name)         // "name: Golem Network"
+		fmt.Printf("symbol: %s\n", symbol)     // "symbol: GNT"
+		fmt.Printf("decimals: %v\n", decimals) // "decimals: 18"
+
+		fmt.Printf("wei: %s\n", bal) // "wei: 74605500647408739782407023"
+
+		fbal := new(big.Float)
+		fbal.SetString(bal.String())
+		value := new(big.Float).Quo(fbal, big.NewFloat(math.Pow10(int(decimals))))
+
+		fmt.Printf("balance: %f", value) // "balance: 74605500.647409"
 	}
-	return wallet.Client(), nil
+	return nil
 }
 
 // implemented method from interface RouterRegistrable
